<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reserva_manual">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reserva"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:id="@+id/regis"
                android:textColor="#000"


                />

            <EditText
                android:id="@+id/manual_placa"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:hint="@string/placa"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:inputType="number"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                />
            <EditText
                android:id="@+id/manual_salida"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:hint="@string/fin"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                />

            <Spinner
                android:id="@+id/manual_zona"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:hint="@string/menu"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                />

            <Spinner
                android:id="@+id/manual_calle"
                android:textSize="20sp"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"

                />

            <Spinner
                android:id="@+id/manual_numero"
                android:textSize="20sp"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"

                />





            <Button
                android:id="@+id/autosregistr"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/reservar"
                android:textAlignment="center"
                android:textSize="20sp"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>